[gd_scene load_steps=11 format=3 uid="uid://q15kloktu21e"]

[ext_resource type="Script" path="res://UI/canvas_layer.gd" id="1_0t8bf"]
[ext_resource type="FontFile" uid="uid://b8253e5gv0ngi" path="res://Font/superstar_memesbruh03.ttf" id="1_p6i4l"]
[ext_resource type="StyleBox" uid="uid://f0gosvlwm4c6" path="res://Font/buttonstyle2.tres" id="2_4nf7d"]
[ext_resource type="Texture2D" uid="uid://da5cdv727yeed" path="res://UI/box.png" id="4_12cec"]
[ext_resource type="Texture2D" uid="uid://dqbnmbjcu6dea" path="res://spritesheet (3).png" id="4_t8vmf"]
[ext_resource type="Texture2D" uid="uid://bitq7dbpr7jos" path="res://UI/grid.png" id="5_ayxqk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ewqp"]
bg_color = Color(0.0823529, 1, 0.643137, 1)

[sub_resource type="Animation" id="Animation_18hee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kcets"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgn07"]
_data = {
"RESET": SubResource("Animation_18hee"),
"idle": SubResource("Animation_kcets")
}

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0t8bf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 184.0
color = Color(0.0156863, 0.0784314, 0.0862745, 1)

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.117647)
position = Vector2(160, 90)
texture = ExtResource("5_ayxqk")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(208, 66)
texture = ExtResource("4_12cec")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.5
offset_top = 15.0
offset_right = 98.5
offset_bottom = 39.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0823529, 1, 0.643137, 1)
theme_override_fonts/font = ExtResource("1_p6i4l")
theme_override_font_sizes/font_size = 24
text = "Parasite Breakout"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 55.0
offset_right = 80.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_disabled_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_p6i4l")
theme_override_styles/normal = SubResource("StyleBoxFlat_2ewqp")
theme_override_styles/hover = ExtResource("2_4nf7d")
theme_override_styles/pressed = ExtResource("2_4nf7d")
theme_override_styles/focus = ExtResource("2_4nf7d")
text = "start"

[node name="levels" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 92.0
offset_right = 80.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_disabled_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_p6i4l")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_2ewqp")
theme_override_styles/hover = ExtResource("2_4nf7d")
theme_override_styles/pressed = ExtResource("2_4nf7d")
theme_override_styles/focus = ExtResource("2_4nf7d")
text = "levels"

[node name="quit" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 129.0
offset_right = 80.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_disabled_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_p6i4l")
theme_override_styles/normal = SubResource("StyleBoxFlat_2ewqp")
theme_override_styles/hover = ExtResource("2_4nf7d")
theme_override_styles/pressed = ExtResource("2_4nf7d")
theme_override_styles/focus = ExtResource("2_4nf7d")
text = "QUIT"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(128, 104)
texture = ExtResource("4_t8vmf")
hframes = 8
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../start")
libraries = {
"": SubResource("AnimationLibrary_cgn07")
}

[node name="levels2" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.0
offset_top = 132.0
offset_right = 12.0
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_disabled_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_p6i4l")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_2ewqp")
theme_override_styles/hover = ExtResource("2_4nf7d")
theme_override_styles/pressed = ExtResource("2_4nf7d")
theme_override_styles/focus = ExtResource("2_4nf7d")
text = "tutorial"

[node name="creators" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.0
offset_top = 59.0
offset_right = -35.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_colors/font_disabled_color = Color(0.0156863, 0.0784314, 0.0862745, 1)
theme_override_fonts/font = ExtResource("1_p6i4l")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_2ewqp")
theme_override_styles/hover = ExtResource("2_4nf7d")
theme_override_styles/pressed = ExtResource("2_4nf7d")
theme_override_styles/focus = ExtResource("2_4nf7d")
text = "creators"

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="creators" to="." method="_on_creators_pressed"]
